@@ -1,8 +1,10 @@
 DIST pclean-0.10.tar.bz2 10420 RMD160 a4994200ff33ac0dbd5bd53957c4867faacddf34 SHA1 57dc0a34768376f2763287a803d16d94bf720885 SHA256 56fa5f861cd163efafdc52e03c3393aa99827d3817b60b7801ac2f1fb6644cad
 DIST pclean-0.11.tar.bz2 10519 RMD160 6d38720696c2ddebd5e21051cbb917908baece36 SHA1 24acedaa5f6dde790aa7d9494003b15397c1e420 SHA256 83e2061a548b4f9810aa48008ac64bdac4663e45c73f5511c5fff79d0410c299
+DIST pclean-0.12.tar.bz2 10539 RMD160 92fbdcf4b7217994fb3b702f51c3ad3ff811b79b SHA1 cd5f52711f775f9bc960661b194fdbd51f402ccb SHA256 edeb16eba0185b87561ca6b7379fafbf012540273eaade354bae2990aa701afa
 DIST pclean-0.9.tar.bz2 10416 RMD160 7f85e9d7e75d8db4e47f97192764962871fc5bd8 SHA1 fbb94362f57c9f70c8e3f91732a35e1c6d6435d1 SHA256 6ea07c7bb21acdfbef00837e4275b461c673e9042293424a0664e3f6f09d9caa
 EBUILD pclean-0.10.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
 EBUILD pclean-0.11.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
+EBUILD pclean-0.12.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
 EBUILD pclean-0.9.ebuild 709 RMD160 49949828439d844e9a699e64fb5894aee406d7b1 SHA1 7cbf35ca6d2824c0da3eac2d8e11bc8f5534dd04 SHA256 c5ae3cde6486e2b07d9bb917e79e8d97b542f425fcd2c77bca4b5e0382e8b74b
-MISC ChangeLog 1172 RMD160 37e204f03f0d8e6223251cee7781c99dfc3e0052 SHA1 9f90207099e36fa8c679443822ec64be2abe0d8c SHA256 cf7dcb0b707d0bb71df526d544451b96e09c40e59f7e6ec9a8c15123f779153d
+MISC ChangeLog 1280 RMD160 e3691200f14583bdca21f8817e76aa4ae5a20196 SHA1 45eb1d6d21f924aab99d0f93e186ae89d755c4df SHA256 79f196edc2c25acb87e563d1c6f886dc881dd1de1e12a15a926b17f1402a4268
 MISC metadata.xml 299 RMD160 100c4374c3be1b0f7f5471dd57b659d3fc6c4eed SHA1 01b95381417d2dce7668a8aab425daee94550186 SHA256 d8e113548c5c418f482af3e1a1b89b2408e2377ece82ae9b6ae46e60d21704d2
