@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pclean-0.12 (06 Dec 2010)
+
+  06 Dec 2010; <alunduil@gentoo.org> +pclean-0.12.ebuild:
+  Adding pclean-0.12
+
 *pclean-0.11 (27 Nov 2010)
 
   27 Nov 2010; <alunduil@gentoo.org> +pclean-0.11.ebuild:
